Ensure the editor takes up all the space

--- a/assets-src/editor.html
+++ b/assets-src/editor.html
@@ -11,8 +11,11 @@
 		}
 
 		form,
-		#editor {
+		#editor,
+		.editor-wrap,
+		.editor-wrap iframe {
 			height: 100%;
+			width: 100%;
 		}
 	</style>
 </head>
