Remove dummy content

--- a/assets-src/editor.html
+++ b/assets-src/editor.html
@@ -22,7 +22,7 @@
 
 <body>
 	<form method="post">
-		<textarea id="editor">Hello, World!</textarea>
+		<textarea id="editor"></textarea>
 	</form>
 </body>
 </html>
